force-app/main/default/objects/blng__Refund__c/blng__Refund__c.object-meta.xml
<CustomObject>
    <label>Refund</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>