force-app/main/default/objects/blng__Refund__c/fields/Account_HC_Connections__c.field-meta.xml
<CustomField>
    <fullName>Account_HC_Connections__c</fullName>
    <formula>blng__Account__r.Active_HC_Connections__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account HC Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>