force-app/main/default/objects/blng__Refund__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <formula>IF( ISBLANK(blng__GLTreatment__c) , &apos;GL treatment field is empty.&apos;, 
   IF(ISBLANK(blng__GLTreatment__r.blng__CreditGLAccount__c),
      IF(ISBLANK(blng__GLTreatment__r.blng__DebitGLAccount__c), &apos;GL Treatment is not associated to a GL Account. GL Account values are empty.&apos;, blng__GLTreatment__r.blng__DebitGLAccount__r.blng__GLAccountNumber__c 
      ), 
    blng__GLTreatment__r.blng__CreditGLAccount__r.blng__GLAccountNumber__c 
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>