force-app/main/default/objects/blng__Refund__c/fields/Payment_Age__c.field-meta.xml
<CustomField>
    <fullName>Payment_Age__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>