force-app/main/default/objects/blng__Refund__c/fields/Payment_NSF__c.field-meta.xml
<CustomField>
    <fullName>Payment_NSF__c</fullName>
    <formula>!ISBLANK(Payment__r.NSF_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment NSF</label>
    <type>Checkbox</type>
</CustomField>