force-app/main/default/objects/blng__Refund__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refund_Reasons</valueSetName>
    </valueSet>
</CustomField>