force-app/main/default/objects/blng__Refund__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refund_Statuses</valueSetName>
    </valueSet>
</CustomField>