force-app/main/default/objects/blng__Refund__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <formula>Payment__r.blng__Invoice__r.Opportunity__r.SBQQ__Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>