force-app/main/default/objects/blng__Refund__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__BaseCurrency__c</columns>
    <columns>blng__CheckNumber__c</columns>
    <columns>blng__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>